# DEFaultplusplus-Transformer-Debugging

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Makefile  PATH_FIXES.md  README.md  REPRODUCIBILITY.md  pyproject.toml
.github/workflows/: ci.yml
1_Detection_Categorization_XAI/: README.md  requirements.txt  run_all.sh  run_rq3_ablation.py  run_xai.py
1_Frankenformer-Code/FrankenFormer-Decoder-Probes/: .gitignore  README.md  requirements.txt
1_Frankenformer-Code/FrankenFormer-Encoder-Probes/: .gitignore  README.md  requirements.txt
2_Diagnosis_Root_Cause/: README.md  run_ndg.sh  run_ndg_stage3.sh  stage_3.md
2_Diagnosis_Root_Cause/ndg_diagnosis_builder/: DIAGNOSIS_BUILDER_README.md  run_stage3_diagnosis_ndg_v1.py
2_Diagnosis_Root_Cause/ndg_stage3/: __init__.py  generate_thesis_figures.py  inference.py  plotting.py
2_Frakenformer-DEFaultpp-Manuscript/defaultpp/: defaultplusplus.tex  qkv_fusion_bug.py
2_Frakenformer-DEFaultpp-Manuscript/frakenformer/: frankenformer.tex
3_Comparison_with_defaultplusplus/: run_all.sh  run_rq6_baselines.py
3_Comparison_with_defaultplusplus/data/: baseline_label_mappings.json  dec_feature_names_tiers.json  dec_xgb_best.json  feature_family_patterns.json
3_Comparison_with_defaultplusplus/results/: rq6_detection_results.json
4_Baseline-comparison_with_defaultpp/: run_baselines.py
5_Benchmarks-realworld_defaultpp/: README.md  REPRODUCTION_SCOPE.md  contract_checks.py  run_benchmarks.py
5_Benchmarks-realworld_defaultpp/cases/: __init__.py  issue_103082_sdpa_causal_lneqs.py  issue_116333_kernel_stride_check.py  issue_17886_t5_prune_relative_bias.py  issue_19045_bert_relative_cache.py  issue_20_sparse_cache_logits.py  issue_23349_jax_seq_lengths.py  issue_35896_qwen2_window_layers.py  issue_36096_flex_attention_weights.py  issue_37574_swa_cache_roll.py  issue_6_qkv_projection_loader.py
5_Benchmarks-realworld_defaultpp/metadata/: issue_6.json
6_User-study-defaultpp/: A_Developer-Study-updated.csv  B_Developer-Study-updated.csv
7_DEFaultpp-code/: Makefile  Plan.md  README.md  defaultplusplus_runtime_roadmap.md  features.md  pyproject.toml  repo_paths.py
7_DEFaultpp-code/configs/: base.yaml
7_DEFaultpp-code/scripts/: setup.sh
baselines/: run_baselines.py
comparison_with_defaultplusplus/: run_all.sh  run_rq6_baselines.py
configs/: base.yaml
data/: README.md
defaultplusplus/: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  RESEARCH.md  pyproject.toml  repo_paths.py
defaultplusplus/configs/: base.yaml
defaultplusplus/examples/: demo_committee.py  demo_diagnosis_clean.html  demo_diagnosis_faulty.html  extract_during_finetune.py  extract_with_hf_trainer.py  record_demo.sh
defaultplusplus/hierarchical_graph_category_rootcause/: README.md  evaluate.py  losses.py  model.py  plotting.py  posthoc_analysis.py  train.py
defaultplusplus/scripts/: build_pypi.sh  dry_run_local.sh  fit_runtime_reference.py  train_diagnoser.py
defaultplusplus/scripts/cc/: README.md  ablation.sh  bench_array.sh  env.sh  merge_shards.sh  setup_env.sh  train.sh
defaultplusplus/src/data/: feature_groups.py  feature_processor.py  fundamental_fpg.py  loader.py
defaultplusplus/src/defaultplusplus/: __init__.py  _version.py  api.py  config.py  hf_callback.py
defaultplusplus/src/defaultplusplus/benchmark/: __init__.py  cli.py  config_grid.py  dataset_writer.py  runner.py  task_metrics.py
defaultplusplus/src/defaultplusplus/data/: __init__.py  cli.py  download.py
defaultplusplus/src/defaultplusplus/deform/: __init__.py  clean_variants.py  fault_config.py  injection.py  operators.py  validation.py
defaultplusplus/src/defaultplusplus/deform/operator_impls/: __init__.py  registry.py
defaultplusplus/src/defaultplusplus/diagnosis/: __init__.py  _group_encoder.py  model.py  predictor.py
defaultplusplus/src/defaultplusplus/extraction/: __init__.py  aggregator.py  collector.py  feature_construction.py  inspector.py  sublayer_capture.py
defaultplusplus/src/defaultplusplus/extraction/metrics/: attention.py  base.py  cache.py  gradient.py  logit.py  positional.py  structural.py  training.py
defaultplusplus/src/defaultplusplus/pretrained/: __init__.py
defaultplusplus/src/defaultplusplus/pretrained/weights/: .gitkeep  decoder.pt  decoder_reference.npz  encoder.pt  encoder_reference.npz
defaultplusplus/src/defaultplusplus/processing/: __init__.py  normalizer.py
defaultplusplus/src/defaultplusplus/ui/: __init__.py
defaultplusplus/src/defaultplusplus/viz/: __init__.py  _deps.py  _features.py  plots.py  report.py
defaultplusplus/src/models/: group_encoder.py
defaultplusplus/tests/: conftest.py  test_cache_nll_divergence.py  test_cache_operators.py  test_clean_variants.py  test_data_download.py  test_diagnosis.py  test_dry_run.py  test_feature_extractor.py  test_feature_names_schema.py  test_operator_coverage.py  test_phase0_gate.py  test_run_discard.py  test_runtime_normalizer.py  test_sublayer_capture.py  test_task_metrics.py  test_viz.py  test_wheel_install.py
detection_categorization_xai/: README.md  preprocess.py  run_parallel.sh
diagnosis_root_cause/: README.md  run_ndg_stage3.sh  run_rq5_signature_matching.py
docs/: ARCHITECTURE.md  SPEC.md  runtime_v1_contract.md  thesis_chapter.tex
docs/figures/: fig_fpg.tex  (+1 more)
hierarchical_graph_category_rootcause/: evaluate.py  losses.py  model.py  plotting.py  posthoc_analysis.py  train.py
manifests/: changes_since_copy.txt  post_patch_sha256.txt  pre_patch_sha256.txt
realworld_evaluation/: REPRODUCTION_SCOPE.md  common.py  contract_checks.py  run_benchmarks.py
scripts/: run_baseline_comparison.sh  run_classifiers.sh  run_diagnosis_builder.sh  run_diagnosis_graph.sh  run_feature_ablation.sh  run_pipeline_parallel.sh  run_pipeline_serial.sh  run_rq6_baseline_comparison.sh  run_signature_matching.sh  run_stage1_classifiers.sh  run_stage1_pipeline_parallel.sh  run_stage1_pipeline_serial.sh  run_stage1_preprocess.sh  run_stage2_rq3_ablation.sh  run_stage2_xai.sh  run_stage3_diagnosis_builder.sh  run_stage3_ndg_cli.sh  run_stage3_signature_matching_rq5.sh  setup.sh
(+242 files in other folders)
