[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-fault-diagnosis"
version = "0.1.0"
description = "Graph-structured metric learning for hierarchical transformer fault diagnosis"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "imbalanced-learn>=0.12",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "hierarchical_graph_category_rootcause*", "baselines*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
