[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defaultplusplus"
version = "0.2.0"
description = "Hierarchical fault diagnosis for HuggingFace transformers"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "imbalanced-learn>=0.12",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "tqdm>=4.65",
    "rich>=13.0",
    "joblib>=1.3",
    "transformers>=4.30",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4"]

[project.scripts]
defaultpp-train = "hierarchical_graph_category_rootcause.train:main"
defaultpp-ablation = "hierarchical_graph_category_rootcause.evaluate:main"
defaultpp-posthoc = "hierarchical_graph_category_rootcause.posthoc_analysis:main"

[tool.setuptools.packages.find]
where = ["7_DEFaultpp-code"]
include = ["src*", "hierarchical_graph_category_rootcause*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
